projects/compiler/test/typechecker/traits/error_trait_impl_invalid_type.out
Error at %TEST_DIR%/typechecker/traits/error_trait_impl_invalid_type.abra:5:14
Invalid item in trait implementations list
  |  trait Bar1 : Foo1 {}
                  ^
Expected the name of a trait, but instead found 'Foo1' (which is a type)

Error at %TEST_DIR%/typechecker/traits/error_trait_impl_invalid_type.abra:6:14
Invalid item in trait implementations list
  |  trait Bar2 : Foo2 {}
                  ^
Expected the name of a trait, but instead found 'Foo2' (which is an enum)

Error at %TEST_DIR%/typechecker/traits/error_trait_impl_invalid_type.abra:7:14
Invalid item in trait implementations list
  |  trait Bar3 : Foo3 {}
                  ^
Expected the name of a trait, but instead found 'Foo3' (which is a decorator)

Error at %TEST_DIR%/typechecker/traits/error_trait_impl_invalid_type.abra:9:16
Invalid item in trait implementations list
  |  trait BarAll : Foo1, Foo2, Foo3 {}
                    ^
Expected the name of a trait, but instead found 'Foo1' (which is a type)

Error at %TEST_DIR%/typechecker/traits/error_trait_impl_invalid_type.abra:9:22
Invalid item in trait implementations list
  |  trait BarAll : Foo1, Foo2, Foo3 {}
                          ^
Expected the name of a trait, but instead found 'Foo2' (which is an enum)

Error at %TEST_DIR%/typechecker/traits/error_trait_impl_invalid_type.abra:9:28
Invalid item in trait implementations list
  |  trait BarAll : Foo1, Foo2, Foo3 {}
                                ^
Expected the name of a trait, but instead found 'Foo3' (which is a decorator)
