projects/compiler/test/typechecker/traits/error_trait_impl_invalid_type.abra
type Foo1 {}
enum Foo2 {}
decorator Foo3 {}

trait Bar1 : Foo1 {}
trait Bar2 : Foo2 {}
trait Bar3 : Foo3 {}

trait BarAll : Foo1, Foo2, Foo3 {}
